# Random-Geometric-Graphs-and-Effective-Resistance

./: .gitignore  Assessing Model Fit with and without Geometric Coefficients.ipynb  Asymptotic Analysis of LASSO Model Fit Quality.ipynb  CoefficientsVsJiggle.ipynb  FixedMeanDegreeVsR2.ipynb  Full_RGG_Models.ipynb  LCC Plots.ipynb  Lattice Perturbation Experiment.ipynb  Original RGG Model Code.ipynb  README.md  Scatterplot mean degree number nodes fit.ipynb  requirements.txt
DataFrames/: Assymptotic_Analysis_Compiled_OLS_Results.csv  Assymptotic_Analysis_R2_Results_OLS.csv  Assymptotic_Analysis_R2_Results_k=12,16,20.csv  Assymptotic_Analysis_R2_Results_k=5.csv  Assymptotic_Analysis_R2_Results_k=6,8,10.csv  Assymptotic_Analysis_R2_Results_merged.csv  LCC_Data_Results.csv  Latice_Perturbation_Experiment_Results_N1024.csv  Lattice_Perturbation_Experiment_Results_OLS.csv
RGG_Library/: README.md  __init__.py  graph_build.py  graph_viz.py  pyproject.toml  setup.cfg
