[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RGG_Library"
version = "0.1.0"
description = "Lightweight graph visualization utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "networkx",
  "pyvis",
  "plotly",
  "matplotlib"
]